# Cube-API

./: .dockerignore  .env.dist  .gitignore  Dockerfile  compiled_instance.json  docker-compose.yaml  instance.json  instance_template.json  pyproject.toml  readme.md  start.sh
.github/workflows/: main.yml
app/: __init__.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/compile/: __init__.py  compile.py  curseforge.py  modrinth.py  utils.py
app/configuration/: config.py  server.py
app/configuration/routes/: __init__.py  routes.py
app/core/: config.py  lifespan.py  server.py  utils.py
app/crud/: files.py
app/integrations/: base_integration.py  cdn_integration.py  curseforge_integration.py  integrations_dependency.py  modrinth_integration.py
app/objects/: __init__.py  compiled_instance.py  compiled_instance_mod.py  curseforge_mod.py  instance.py
app/repositories/: base_repository.py  cache_repository.py  content_cache_repository.py  content_repository.py  instance_cache_repository.py  instance_repository.py  mod_cache_repository.py  mod_repository.py
app/repositories/mod/: mod_content_cache_repository.py  mod_content_repository.py
app/repositories/mongo/: mongo_base_repository.py  mongo_cache_repository.py  mongo_content_cache_repository.py  mongo_content_repository.py  mongo_instance_cache_repository.py  mongo_instance_repository.py  mongo_mod_cache_repository.py  mongo_mod_content_cache_repository.py  mongo_mod_content_repository.py  mongo_mod_repository.py  mongo_resourcepack_content_cache_repository.py  mongo_resourcepack_content_repository.py
app/repositories/repositories_mongo/: mongo_base_repository.py  mongo_cache_repository.py  mongo_content_cache_repository.py  mongo_content_repository.py
app/repositories/resourcepack/: resourcepack_content_cache_repository.py  resourcepack_content_repository.py
app/routes/: instance.py
app/schemas/: cache_schema.py  content_schema.py  instance.py  instance_schema.py  integration_schema.py  mod_content_schema.py  mod_schema.py  modrinth_mod.py  resourcepack_content_schema.py
app/services/: cache_service.py  compile_cache_service.py  compile_content_service.py  compile_service.py  content_service.py  instance_service.py  mod_cache_service.py  mod_content_cache_service.py  mod_content_service.py  mod_service.py  resourcepack_content_cache_service.py  resourcepack_content_service.py
app/services/mod/: mod_content_cache_service.py  mod_content_service.py
app/storage/: mongo_storage.py
tests/: conftest.py
tests/integrations/: test_curseforge_integration.py  test_modrinth_integration.py
tests/services/: test_cache_service.py
(+9 files in other folders)
