[tool.poetry]
name = "cube-api"
version = "0.1.0"
description = ""
authors = ["fadegor05 <fad.egor05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = { extras = ["standart"], version = "^0.27.0.post1" }
python-dotenv = "^1.0.1"
pydantic = "^2.6.0"
requests = "^2.31.0"
aiohttp = "^3.11.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
aioresponses = "^0.7.7"
motor = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration",
    "slow",
]
addopts = "-v --tb=long"

[tool.ruff]
# match black
line-length = 120
target-version = "py311"
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ", # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100", # ignore missing docs
    "FIX002", # too verbose descriptions of todos
    "E501", # line too long
    "TRY003", # external messages in exceptions are too verbose

    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "TD002",
    "TD003",
    "B008"
]